--- a/LabBook.org
+++ b/LabBook.org
@@ -6,78 +6,93 @@
 #+EXPORT_SELECT_TAGS: export
 #+EXPORT_EXCLUDE_TAGS: noexport
 #+SEQ_TODO: TODO(t!) STARTED(s!) WAITING(w!) | DONE(d!) CANCELLED(c!) DEFERRED(f!)
+#+mode: org
+#+coding: utf-8
 
-Esse documento est√° em pt-br
+Esse documento est· em pt-br
 
-* [00:18:39; 02.07.2016] Tarefas da Primeira Reuni√£o com o Professor Lucas
-** Principais trabalhos relacionados - Artigo do Luis Felipe
-|------------+---------------------------------------+-----------------------------------------------------------+---------------------------------|
-| Autores    | T√≠tulo                                | Trabalho                                                  | Diferen√ßas                      |
-|------------+---------------------------------------+-----------------------------------------------------------+---------------------------------|
-| Freeh      | Using multiple energy gears in mpi    | O principal objetivo desse trabalho √© propor uma          | 1. Uso de Desing of Experiments |
-| et al.     | programs on a power-scalable cluster  | escala de frequ√™ncia para aplica√ß√µes HPC, avaliando todas | 2. Uso das frequ√™ncias alta e   |
-|            |                                       | as possibilidades de frequ√™ncias dispon√≠veis.             | baixa                           |
-|            |                                       | Esse trabalho usa a biblioteca cpufreq-utils para         |                                 |
-|            |                                       | recuperar a frequ√™ncia m√©dia.                             |                                 |
-|------------+---------------------------------------+-----------------------------------------------------------+---------------------------------|
-| Laurenzano | Reducing energy usage with memory and | A abordagem de Laurenzano et al. define a melhor          | 1. O foco √© no c√≥digo da        |
-| et al.     | computation-aware dynamic frequency   | frequ√™ncia por loop. A t√©cnica considera diferentes       | aplica√ß√£o paralela              |
-|            | scaling                               | CPUs, configura√ß√µes de mem√≥ria para visualizar a melhor   | 2. Busca de melhor              |
-|            |                                       | rela√ß√£o entre as configura√ß√µes de frequ√™ncia, processador | configura√ß√£o (tempo e energia)  |
-|            |                                       | e mem√≥ria.                                                |                                 |
-|------------+---------------------------------------+-----------------------------------------------------------+---------------------------------|
-- Alguns trabalhos poss√≠veis: 
-*** Caracteriza√ß√£o de aplica√ß√µes paralelas implementadas em OpenMP
-	=Motivativa√ß√£o=: An√°lise do comportamento da aplica√ß√£o paralela
-	via contadores de hardware. A partir disso ser√° poss√≠vel
-	visualizar o perfil de execu√ß√£o da aplica√ß√£o pelos contadores
-	de hardware. A t√©cnica pode ser usada como uma pr√©-execu√ß√£o.
+* [00:18:39; 02.07.2016] Tarefas da Primeira Reuni„o com o Professor Lucas :Gabriel:
+** STARTED Principais trabalhos relacionados - Artigo do Luis Felipe
+- State "STARTED"    from              [2016-08-03 Qua 00:34]
+|------------+-----------------------+----------------------------------+---------------------------------------------+----------------------+----------------------------------+-------------------------------------+----------------------|
+| Autores    | Titulo                | Objetivo                         | Metodologia                                 | Benchmark,           | Resultados                       | ObservaÁao                          | DiferenÁa            |
+|            |                       |                                  |                                             | Ferramenta ou        |                                  |                                     | do nosso trabalho    |
+|            |                       |                                  |                                             | Tecnologia           |                                  |                                     |                      |
+|------------+-----------------------+----------------------------------+---------------------------------------------+----------------------+----------------------------------+-------------------------------------+----------------------|
+| Laurenzano |                       |                                  |                                             |                      | - Os principais                  | - O autor nao chega a definir,      | - Foco em aplicaÁoes |
+| et al.     | =Reducing energy usage= | - Abordagem que permite          | - InstrumentaÁao realizada                  | - Benchmark          | resultados adquiridos            | mas menciona que uma aplicaÁao      | paralelas (OpenMP)   |
+|            | =with memory and=       | selecionar *por laÁo* a melhor     | atraves da utilizaÁao da                    | proprio: =pcubed=      | pelos autores foi a              | =memory-bound= depende primeiramente  | - Regiao paralelas   |
+|            | =computation-aware=     | frequencia de clock.             | ferramenta PEBIL toolkit                    | (PMaC's Performance  | economia de cerca                | da proximidade, tamanho e do        | dentro da abordagem  |
+|            | =dynamic frequency=     | O criterio de frequencia mais    | - Uso da biblioteca cpu-freq                | and Power benchmark) | de 7,6% de energia para          | Speedup disponivel com as operaÁoes | fork-join            |
+|            | =scaling=               | adequada esta entre desempenho e | para alterar a frequencia                   |                      | a primeira plataforma de         | sob a memoria.                      |                      |
+|            |                       | consumo de energia               | do processador                              |                      | execuÁao (Intel Xeon E5530)      |                                     |                      |
+|            |                       |                                  | - Experimento: os paramentos                |                      | e para a segunda plataforma      |                                     |                      |
+|            |                       |                                  | levados em consideraÁao para                |                      | (AMD Opteron 8380) cerca         |                                     |                      |
+|            |                       |                                  | aplicaÁao sao: taxa de hit                  |                      | de 10,6%.                        |                                     |                      |
+|            |                       |                                  | dos diferentes niveis de cache,             |                      | - Vale lembrar, que esses        |                                     |                      |
+|            |                       |                                  | operaÁoes de ponto-flutuante (FP) para      |                      | ganhos usando DVFS puramente     |                                     |                      |
+|            |                       |                                  | operaÁoes de memoria e a media              |                      | de maneira consciente (a partir  |                                     |                      |
+|            |                       |                                  | da computaÁao de operaÁoes em FP            |                      | do conhecimento do comportamento |                                     |                      |
+|            |                       |                                  | e inteiro.                                  |                      | da aplicaÁao)                    |                                     |                      |
+|            |                       |                                  | - A plataforma de execuÁao escolhida        |                      |                                  |                                     |                      |
+|            |                       |                                  | por eles *permite a alteraÁao da frequencia*  |                      |                                  |                                     |                      |
+|            |                       |                                  | *independentemente de cada core* (frequencias |                      |                                  |                                     |                      |
+|            |                       |                                  | avaliadas 1.60, 1.73, 1.86, 2, 2.13, 2.26,  |                      |                                  |                                     |                      |
+|            |                       |                                  | 2.39 ou 2.40 GHz)                           |                      |                                  |                                     |                      |
+|------------+-----------------------+----------------------------------+---------------------------------------------+----------------------+----------------------------------+-------------------------------------+----------------------|
+
+- Alguns trabalhos possÌveis: 
+*** CaracterizaÁ„o de aplicaÁıes paralelas implementadas em OpenMP
+	=MotivativaÁ„o=: An·lise do comportamento da aplicaÁ„o paralela
+	via contadores de hardware. A partir disso ser· possÌvel
+	visualizar o perfil de execuÁ„o da aplicaÁ„o pelos contadores
+	de hardware. A tÈcnica pode ser usada como uma prÈ-execuÁ„o.
 
 	=Metodologia=: Uso da abordagem =DoE= (Desing of Experiments) para
 	projetar o experimento e analisar os resultados. Freeh et
 	al. possui um trabalho similar, mas o diferencial do nosso
-	trabalho √© a metodologia e o uso da t√©cnica DoE.
+	trabalho È a metodologia e o uso da tÈcnica DoE.
         
-*** Modelagem de energia para aplica√ß√µes h√≠bridas OpenMP/MPI
-	=Motivativa√ß√£o=: Contabilizar a energia gasta em cada regi√£o
-	paralela, mas tamb√©m a energia gasta dentro do n√≥ (intra-node)
-	e a comunica√ß√£o dentro do n√≥ (se existir) e a comunica√ß√£o fora
-	do n√≥. Esse trabalho se concentraria na estimativa da energia
-	total gasta pela aplica√ß√£o h√≠brida implementada em
+*** Modelagem de energia para aplicaÁıes hÌbridas OpenMP/MPI
+	=MotivativaÁ„o=: Contabilizar a energia gasta em cada regi√£o
+	paralela, mas tambÈm a energia gasta dentro do nÛ (intra-node)
+	e a comunicaÁ„o dentro do nÛ (se existir) e a comunicaÁ„o fora
+	do nÛ. Esse trabalho se concentraria na estimativa da energia
+	total gasta pela aplicaÁ„o hÌbrida implementada em
 	OpenMP/MPI.
 
 	=Metodologia=: A metodologia pode ser a seguinte (uma abordagem
 	button-up):
-        a) Estimar a energia de cada regi√£o paralela (usando
-           contadores de hardware em diferentes n√≥s);
-        b) Estimar a energia da aplica√ß√£o (fora do limite fork-join);
-        c) Estimar a energia da aplica√ß√£o na comunica√ß√£o intra-n√≥;
-        d) Estimar a energia da comunica√ß√£o inter-node (fora do n√≥).
+        a) Estimar a energia de cada regi„o paralela (usando
+           contadores de hardware em diferentes nÛs);
+        b) Estimar a energia da aplicaÁ„o (fora do limite fork-join);
+        c) Estimar a energia da aplicaÁ„o na comunicaÁ„o intra-nÛ;
+        d) Estimar a energia da comunicaÁ„o inter-node (fora do nÛ).
 
-  =Results=: O resultado seria a estimativa de energia da aplica√ß√£o
-  h√≠brida como um todo e tamb√©m a energia gasta em cada n√≥. Isso pode
-  oferecer uma estimativa correta de energia para essas aplica√ß√µes, a
-  partir da informa√ß√£o obtida o desenvolvedor poder√° otimizar alguma
-  parte da sua aplica√ß√£o.
-* [19:10:05; 05.07.2016] Reuni√£o Semanal com o Professor Lucas
-** Defini√ß√£o do assunto da disserta√ß√£o
-	=Objetivo=: Detectar as fases da aplica√ß√£o utilizando contadores
+  =Results=: O resultado seria a estimativa de energia da aplicaÁ„o
+  hÌbrida como um todo e tambÈm a energia gasta em cada nÛ. Isso pode
+  oferecer uma estimativa correta de energia para essas aplicaÁıes, a
+  partir da informaÁ„o obtida o desenvolvedor poder· otimizar alguma
+  parte da sua aplicaÁ„o.
+* [19:10:05; 05.07.2016] Reuni„o Semanal com o Professor Lucas :Gabriel:Lucas:
+** DefiniÁ„oo do assunto da dissertaÁ„o
+	=Objetivo=: Detectar as fases da aplicaÁ„o utilizando contadores
 	de hardware.
 
     =Ferramentas a serem investigadas=: ScoreP (com PAPI), ExtraE e
-    TAU. Tamb√©m procurar como realizar uma medi√ß√£o utilizando
+    TAU. TambÈm procurar como realizar uma mediÁ„o utilizando
     contadores de hardware along time.
 
     =Tarefas=: 
     	a) fazer os trabalhos relacionados direcionando-os na
-    tem√°tica ``Parallel Application Phase Detection'';
-    	b) implementar a detec√ß√£o de fase usando contadores do PAPI +
+    tem·tica ``Parallel Application Phase Detection'';
+    	b) implementar a detecÁ„o de fase usando contadores do PAPI +
            ScoreP;
        	    b.1) A parte =along_time=
 		c) Definir as fases, aplicar conhecimento para reduzir energia
     
-* [22:15:57; 08.07.2016] Configura√ß√£o de Ambiente Scorep e PAPI
-** Instala√ß√£o do PAPI
+* [22:15:57; 08.07.2016] ConfiguraÁ„o de Ambiente Scorep e PAPI     :Gabriel:
+** InstalaÁ„o do PAPI
 #+begin_src sh :results output :exports both
 cd $HOME/Downloads/
 wget http://icl.cs.utk.edu/projects/papi/downloads/papi-5.4.3.tar.gz
@@ -85,58 +100,65 @@ tar -vzxf papi-5.4.3.tar.gz
 cd papi-5.4.3/src/
 ./configure
 make
+sudo make install
 #+end_src
 
-#+begin_src sh :results output :exports both
-sudo apt-get install papi-tools -y
-#+end_src
-
-- Fazendo um teste para verificar a instala√ß√£o da ferramenta:
+- Verificando se a instalaÁ„o foi realizada com sucesso
 
 #+begin_src sh :results output :exports both
-cd $HOME/Downloads/papi-5.4.3/src/
-bash ./run_tests.sh -v
+cd /usr/local/lib/
+ls | grep -i libpapi
 #+end_src
 
 #+RESULTS:
-#+begin_example
-Platform:
-Linux morocomputer 4.4.0-28-generic #47-Ubuntu SMP Fri Jun 24 10:09:13 UTC 2016 x86_64 x86_64 x86_64 GNU/Linux
-Date:
-S√°b Jul  9 11:19:29 BRT 2016
+: libpapi.a
+: libpapi.so
+: libpapi.so.5
+: libpapi.so.5.4.3
+: libpapi.so.5.4.3.0
 
-Cpuinfo:
-processor	: 0
-vendor_id	: GenuineIntel
-cpu family	: 6
-model		: 69
-model name	: Intel(R) Core(TM) i5-4210U CPU @ 1.70GHz
-stepping	: 1
-microcode	: 0x1c
-cpu MHz		: 1902.804
-cache size	: 3072 KB
-physical id	: 0
-siblings	: 4
-core id		: 0
-cpu cores	: 2
-apicid		: 0
-initial apicid	: 0
-fpu		: yes
-fpu_exception	: yes
-cpuid level	: 13
-wp		: yes
-flags		: fpu vme de pse tsc msr pae mce cx8 apic sep mtrr pge mca cmov pat pse36 clflush dts acpi mmx fxsr sse sse2 ss ht tm pbe syscall nx pdpe1gb rdtscp lm constant_tsc arch_perfmon pebs bts rep_good nopl xtopology nonstop_tsc aperfmperf eagerfpu pni pclmulqdq dtes64 monitor ds_cpl vmx est tm2 ssse3 sdbg fma cx16 xtpr pdcm pcid sse4_1 sse4_2 movbe popcnt tsc_deadline_timer aes xsave avx f16c rdrand lahf_lm abm epb tpr_shadow vnmi flexpriority ept vpid fsgsbase tsc_adjust bmi1 avx2 smep bmi2 erms invpcid xsaveopt dtherm ida arat pln pts
-bugs		:
-bogomips	: 3392.06
-clflush size	: 64
-cache_alignment	: 64
-address sizes	: 39 bits physical, 48 bits virtual
-power management:
+#+begin_src sh :results output :exports both
+cd /usr/local/include/
+ls | grep -i papi.h
+#+end_src
 
+#+RESULTS:
+: f77papi.h
+: f90papi.h
+: fpapi.h
+: papi.h
 
-#+end_example
+** InstalaÁao do Scorep
 
-- Compilando aplica√ß√£o OpenMP com Scorep
+- Um dos pre-requisitos de instala√ßao do Scorep e a instala√ßao do
+  =Qt_app=.
+
+#+begin_src sh :results output :exports both
+cd $HOME/Downloads/
+wget http://download.qt.io/official_releases/online_installers/qt-unified-linux-x64-online.run
+./qt-unified-linux-x64-online.run
+#+end_src
+
+#+RESULTS:
+
+#+begin_src sh :results output :exports both
+cd $HOME/Programs/
+wget http://www.vi-hps.org/upload/packages/scorep/scorep-2.0.2.tar.gz
+tar -vxf scorep-2.0.2.tar.gz
+rm scorep-2.0.2.tar.gz
+cd scorep-2.0.2/
+./configure --prefix=$HOME/Programs/scorep-2.0.2/ --enable-papi  --with-papi-lib=/usr/local/lib/ --with-papi-header=/usr/local/include/
+make
+sudo make install
+#+end_src
+
+#+RESULTS:
+
+#+BEGIN_EXAMPLE
+
+#+END_EXAMPLE
+
+- Compilando aplicaÁ„o com OpenMP com Scorep
 
 #+begin_src sh :results output :exports both
 cd benchmarks/MM/
@@ -158,7 +180,7 @@ tiling.c
 tilingT.c
 #+end_example
 
-- Habilitando o trace para a execu√ß√£o da aplica√ß√£o:
+- Habilitando o trace para a execuÁ„o da aplicaÁ„o:
 
 #+begin_src sh :results output :exports both
 cd benchmarks/MM/
@@ -189,10 +211,10 @@ normalT.c
 tiling.c
 tilingT.c
 #+end_example
-* [16:22:11; 14.07.2016] Conversa semanal com Gabriel
+* [16:22:11; 14.07.2016] Conversa semanal com Gabriel         :Gabriel:Lucas:
 
-Com rela√ß√£o a entrada:
-- [[*Defini√ß√£o do assunto da disserta√ß√£o][Defini√ß√£o do assunto da disserta√ß√£o]]
+Com relaÁ„o a entrada:
+- [[*Defini√ß√£o do assunto da disserta√ß√£o][DefiniÁ„o do assunto da dissertaÁ„o]]
 
 Rastreamento com scorep 2.0.2, configurado da seguinte maneira:
 
@@ -200,7 +222,7 @@ Rastreamento com scorep 2.0.2, configurado da seguinte maneira:
 ./configure --prefix=/home/schnorr/install/scorep-2.0.2/ --enable-papi  --with-papi-lib=/usr/local/lib/ --with-papi-header=/usr/local/include/
 #+END_EXAMPLE
 
-Na sa√≠da do config.log, temos:
+Na saÌda do config.log, temos:
 
 #+BEGIN_EXAMPLE
 (...)
@@ -220,7 +242,7 @@ Na sa√≠da do config.log, temos:
 (...)
 #+END_EXAMPLE
 
-Depois de configurar as seguintes vari√°veis de ambiente:
+Depois de configurar as seguintes vari·veis de ambiente:
 
 #+BEGIN_EXAMPLE
 export SCOREP_ENABLE_TRACING=true
@@ -228,20 +250,20 @@ export SCOREP_METRIC_PAPI=PAPI_L1_TCM
 #+END_EXAMPLE
 
 O programa foi executado com =sudo -E=. O argumento =-E= foi importante
-para que as vari√°veis de ambiente do shell corrente sejam transferidas
-para o shell que o sudo criar√° para lan√ßar a aplica√ß√£o. Precisamos
-utilizar =sudo= pois a aplica√ß√£o necessita acessar contadores de
-hardware que s√≥ s√£o capazes de ser lidos pelo superusu√°rio. Uma forma
-melhor de fazer isto √© utilizar =setcap=.
+para que as vari·veis de ambiente do shell corrente sejam transferidas
+para o shell que o sudo criar· para lanÁar a aplicaÁ„o. Precisamos
+utilizar =sudo= pois a aplicaÁ„o necessita acessar contadores de
+hardware que s„o capazes de ser lidos pelo superusu·rio. Uma forma
+melhor de fazer isto È utilizar =setcap=.
 
 Depois de executar o programa que foi compilado com =scorep gcc=,
-podemos ver a evolu√ß√£o da m√©trica =PAPI_L1_TCM= ao longo do tempo
-atrav√©s do seguinte comando:
-- a terceira coluna √© o timestamp onde o valor da m√©trica foi
+podemos ver a evoluÁ„o da mÈtrica =PAPI_L1_TCM= ao longo do tempo
+atravÈs do seguinte comando:
+- a terceira coluna È o timestamp onde o valor da mÈtrica foi
   observado
-- o valor da m√©trica aparece depois do UINT64
+- o valor da mÈtrica aparece depois do UINT64
 
-No caso de =PAPI_L1_TCM= o valor da m√©trica √© a quantidade de vezes que
+No caso de =PAPI_L1_TCM= o valor da mÈtrica È a quantidade de vezes que
 ocorreu cache miss na cache L1.
 
 #+BEGIN_EXAMPLE
@@ -255,21 +277,21 @@ METRIC                           12884901888     2932482732325389  Metric: 0, 1 
 ...
 #+END_EXAMPLE
 
-Quais s√£o os contadores que devem ser medidos?
-- Dif√≠cil responder, primeiro precisamos investigar quais contadores
-  poderiam (no caso de valores altos) representar uma aplica√ß√£o
-  CPU-bound e uma aplica√ß√£o MEMORY-bound.
+Quais s„o os contadores que devem ser medidos?
+- DifÌcil responder, primeiro precisamos investigar quais contadores
+  poderiam (no caso de valores altos) representar uma aplicaÁ„o
+  CPU-bound e uma aplicaÁ„o MEMORY-bound.
 - Procurar na literatura artigos que consigam definir uma eventual
-  rela√ß√£o que exista entre CPU-bound e determinados contadores de
+  relaÁ„o que exista entre CPU-bound e determinados contadores de
   hardware (e o equivalente para algo MEMORY-bound)
 
 Tarefas:
-- Medir ao longo do tempo e com scorep o m√°ximo poss√≠vel de contadores
-  - Eventualmente todos os contadores dispon√≠veis
-- Utilizar a aplica√ß√£o de MM desenvolvida por ti
-* [23:39:31; 14.07.2016] Execu√ß√£o do benchmark MM com PAPI via Scorep
+- Medir ao longo do tempo e com scorep o m·ximo possÌvel de contadores
+  - Eventualmente todos os contadores disponÌveis
+- Utilizar a aplicaÁ„o de MM desenvolvida por ti
+* [23:39:31; 14.07.2016] ExecuÁ„o do benchmark MM com PAPI via Scorep :Gabriel:
 
-- Compila√ß√£o, utilizando o make file com a diretiva =scorep gcc=:
+- CompilaÁ„o, utilizando o make file com a diretiva =scorep gcc=:
 
 #+begin_src sh :results output :exports both
 cd benchmarks/MM/
@@ -362,7 +384,7 @@ ENTER                                      0       79633289900948  Region: "main
 
 #+end_example
 
-* DONE [09:25:09; 15.07.2016] Cria√ß√£o do script para execu√ß√£o do benchmark MM com PAPI via Scorep
+* DONE [09:25:09; 15.07.2016] CriaÁ„o do script para execuÁ„o do benchmark MM com PAPI via Scorep :Gabriel:
 
 - State "DONE"       from "STARTED"    [2016-07-15 Sex 20:35]
 - State "STARTED"    from              [2016-07-15 Sex 10:14]
@@ -402,11 +424,11 @@ done
 
 #+end_src
 
-O script de execu√ß√£o est√° rodando corretamente, os contadores PAPI
+O script de execuÁ„o est· rodando corretamente, os contadores PAPI
 utilizados foram escolhidos de acordo com a disponibilidade da minha
-m√°quina pessoal. Estou com problemas apenas na execu√ß√£o do algoritmo
-=tiling=, isso √© porque o mesmo utiliza muito a mem√≥ria principal para
-otimizar o uso da cache. O erro que est√° acontecendo com o SCOREP √© o
+m·quina pessoal. Estou com problemas apenas na execuÁ„o do algoritmo
+=tiling=, isso √© porque o mesmo utiliza muito a memÛria principal para
+otimizar o uso da cache. O erro que est· acontecendo com o SCOREP È o
 seguinte:
 
 #+BEGIN_EXAMPLE
@@ -464,7 +486,7 @@ done
 
 #+end_src
 
-Executando o script com a modifica√ß√£o no =SCOREP_TOTAL_MEMORY= para 3
+Executando o script com a modificaÁ„o no =SCOREP_TOTAL_MEMORY= para 3
 gigabytes, ocorreu o seguinte erro:
 
 #+BEGIN_EXAMPLE
@@ -478,7 +500,7 @@ Esse erro de acordo com os f√≥runs √© devido a minha limita√ß√£o de
 mem√≥ria principal. 
 
 - Vou modificar o script para executar todos os algoritmos de
-  multiplica√ß√£o de matriz, exceto o =tiling=.
+  multiplicaÁ„o de matriz, exceto o =tiling=.
 
 #+begin_src sh :results output :exports both :tangle benchmarks/MM/scriptSimulation3.bash
 #!bin/bash
@@ -531,16 +553,16 @@ exec_normal_parT60
 exec_normal_parT80
 #+end_example
 
-O pr√≥ximo passo √© fazer um script para analisar esses dados e a partir
-deles gerar um arquivo csv. Esse script dever√° utilizar a sa√≠da da
+O prÛximo passo È fazer um script para analisar esses dados e a partir
+deles gerar um arquivo csv. Esse script dever· utilizar a saÌda da
 ferramenta =otf2print= disponibilizada pelo =scorep=.
-* WAITING [00:09:15; 16.07.2016] An√°lise dos resultados do experimento com PAPI - benchmark MM
+* WAITING [00:09:15; 16.07.2016] An·lise dos resultados do experimento com PAPI - benchmark MM :Gabriel:
 - State "WAITING"    from "STARTED"    [2016-07-18 Seg 12:07]
 - State "STARTED"    from              [2016-07-16 S√°b 14:24]
 
 ** Exportando o arquivo csv por thread
 Primeiramente vou fazer um script teste para gerar o csv do arquivo
-gerado na execu√ß√£o da vers√£o =normal_par= com =80= de entrada. O script
+gerado na execuÁ„o da vers„o =normal_par= com =80= de entrada. O script
 vai ser criado em python, porque como s√£o muitos dado
 
 #+begin_src sh :results output :exports both
@@ -598,8 +620,8 @@ THREAD_TEAM_END 12884901888 148300137827954 Thread Team:
 THREAD_JOIN 0 148300137838547 Model: "OpenMP"        
 #+end_example
 
-A partir dessa sa√≠da √© poss√≠vel visualizar o momento em que o fork
-inicia e termina. Al√©m disso √© poss√≠vel visualizar o identificador de
+A partir dessa saÌda È possÌvel visualizar o momento em que o fork
+inicia e termina. AlÈm disso È possÌvel visualizar o identificador de
 cada thread.
 
 #+begin_src sh :results output :exports both :tangle benchmarks/MM/scriptAnalyseTest.sh
@@ -625,8 +647,8 @@ done
 : 0
 
 Agora vou utilizar um desses identificadores de thread para recuperar
-as medidas obtidas pelos =contadores de hardware= para as regi√µes de
-c√≥digo daquela thread.
+as medidas obtidas pelos =contadores de hardware= para as regiıes de
+cÛdigo daquela thread.
 
 #+begin_src sh :results output :exports both
 cd benchmarks/MM/exec_normal_par80/
@@ -651,7 +673,7 @@ LEAVE, 8589934592 148300137788125 ,Region: ,!$omp <3>
 THREAD_TEAM_END 8589934592 148300137794587 Thread Team:        
 #+end_example
 
-- O script final para gerar os arquivos =csv= para an√°lise ser√° criado a
+- O script final para gerar os arquivos =csv= para an·lise ser· criado a
   partir dos fragmentos de script anteriores
 
 #+begin_src sh :results output :exports both :tangle benchmarks/MM/scriptCSVExporter.sh
@@ -683,92 +705,92 @@ done
 
 #+RESULTS:
 | Folder: exec_continuos_par100  |
-| Thread visited: 1            |
-| Thread visited: 2            |
-| Thread visited: 3            |
-| Thread visited: 4            |
+| Thread visited: 1              |
+| Thread visited: 2              |
+| Thread visited: 3              |
+| Thread visited: 4              |
 | Folder: exec_continuos_par50   |
-| Thread visited: 1            |
-| Thread visited: 2            |
-| Thread visited: 3            |
-| Thread visited: 4            |
+| Thread visited: 1              |
+| Thread visited: 2              |
+| Thread visited: 3              |
+| Thread visited: 4              |
 | Folder: exec_continuos_par60   |
-| Thread visited: 1            |
-| Thread visited: 2            |
-| Thread visited: 3            |
-| Thread visited: 4            |
+| Thread visited: 1              |
+| Thread visited: 2              |
+| Thread visited: 3              |
+| Thread visited: 4              |
 | Folder: exec_continuos_par80   |
-| Thread visited: 1            |
-| Thread visited: 2            |
-| Thread visited: 3            |
-| Thread visited: 4            |
+| Thread visited: 1              |
+| Thread visited: 2              |
+| Thread visited: 3              |
+| Thread visited: 4              |
 | Folder: exec_continuos_parT100 |
-| Thread visited: 1            |
-| Thread visited: 2            |
-| Thread visited: 3            |
-| Thread visited: 4            |
+| Thread visited: 1              |
+| Thread visited: 2              |
+| Thread visited: 3              |
+| Thread visited: 4              |
 | Folder: exec_continuos_parT50  |
-| Thread visited: 1            |
-| Thread visited: 2            |
-| Thread visited: 3            |
-| Thread visited: 4            |
+| Thread visited: 1              |
+| Thread visited: 2              |
+| Thread visited: 3              |
+| Thread visited: 4              |
 | Folder: exec_continuos_parT60  |
-| Thread visited: 1            |
-| Thread visited: 2            |
-| Thread visited: 3            |
-| Thread visited: 4            |
+| Thread visited: 1              |
+| Thread visited: 2              |
+| Thread visited: 3              |
+| Thread visited: 4              |
 | Folder: exec_continuos_parT80  |
-| Thread visited: 1            |
-| Thread visited: 2            |
-| Thread visited: 3            |
-| Thread visited: 4            |
+| Thread visited: 1              |
+| Thread visited: 2              |
+| Thread visited: 3              |
+| Thread visited: 4              |
 | Folder: exec_normal_par100     |
-| Thread visited: 1            |
-| Thread visited: 2            |
-| Thread visited: 3            |
-| Thread visited: 4            |
+| Thread visited: 1              |
+| Thread visited: 2              |
+| Thread visited: 3              |
+| Thread visited: 4              |
 | Folder: exec_normal_par50      |
-| Thread visited: 1            |
-| Thread visited: 2            |
-| Thread visited: 3            |
-| Thread visited: 4            |
+| Thread visited: 1              |
+| Thread visited: 2              |
+| Thread visited: 3              |
+| Thread visited: 4              |
 | Folder: exec_normal_par60      |
-| Thread visited: 1            |
-| Thread visited: 2            |
-| Thread visited: 3            |
-| Thread visited: 4            |
+| Thread visited: 1              |
+| Thread visited: 2              |
+| Thread visited: 3              |
+| Thread visited: 4              |
 | Folder: exec_normal_par80      |
-| Thread visited: 1            |
-| Thread visited: 2            |
-| Thread visited: 3            |
-| Thread visited: 4            |
+| Thread visited: 1              |
+| Thread visited: 2              |
+| Thread visited: 3              |
+| Thread visited: 4              |
 | Folder: exec_normal_parT100    |
-| Thread visited: 1            |
-| Thread visited: 2            |
-| Thread visited: 3            |
-| Thread visited: 4            |
+| Thread visited: 1              |
+| Thread visited: 2              |
+| Thread visited: 3              |
+| Thread visited: 4              |
 | Folder: exec_normal_parT50     |
-| Thread visited: 1            |
-| Thread visited: 2            |
-| Thread visited: 3            |
-| Thread visited: 4            |
+| Thread visited: 1              |
+| Thread visited: 2              |
+| Thread visited: 3              |
+| Thread visited: 4              |
 | Folder: exec_normal_parT60     |
-| Thread visited: 1            |
-| Thread visited: 2            |
-| Thread visited: 3            |
-| Thread visited: 4            |
+| Thread visited: 1              |
+| Thread visited: 2              |
+| Thread visited: 3              |
+| Thread visited: 4              |
 | Folder: exec_normal_parT80     |
-| Thread visited: 1            |
-| Thread visited: 2            |
-| Thread visited: 3            |
-| Thread visited: 4            |
-|                              |
+| Thread visited: 1              |
+| Thread visited: 2              |
+| Thread visited: 3              |
+| Thread visited: 4              |
+|                                |
 
 ** Analizando resultados obtidos
 
 - O caso escolhido para ser o primeiro a ser analisado e plotado em
-  gr√°fico √© o algoritmo normal de entrada igual a 80. Seus rastros
-  est√£o dispon√≠veis na pasta:
+  gr·fico È o algoritmo normal de entrada igual a 80. Seus rastros
+  est„o disponÌveis na pasta:
 
 #+begin_src sh :results output :exports both :tangle benchmarks/MM/exec_normal_par80/scriptOfGraph.sh
 #path: benchmarks/MM/exec_normal_par80/
@@ -799,8 +821,8 @@ rm threadAnalyse.csv
 
 #+RESULTS:
 
-- Vou gerar um gr√°fico para visualizarmos o comportamento das threads
-  nessa aplica√ß√£o, atrav√©s dos 4 contadores analisados.
+- Vou gerar um gr·fico para visualizarmos o comportamento das threads
+  nessa aplicaÁ„o, atravÈs dos 4 contadores analisados.
 
 #+begin_src R :results output graphics :file "graph.pdf" :exports both :session *Mnormalpar80*  :tangle benchmarks/MM/exec_normal_par80/plotScript.r
 library(dplyr);
@@ -819,16 +841,16 @@ ggplot(k, aes(x=as.factor(thread), y=value, color=hardwareCounter)) +
 #+RESULTS:
 [[file:graph.pdf]]
 
-* [2016-07-18 Mon 23:57] Retorno sobre as entradas anteriores
+* [2016-07-18 Mon 23:57] Retorno sobre as entradas anteriores         :Lucas:
 
-N√£o consegui gerar a data desta entrada no formato visto nas se√ß√µes
+N„o consegui gerar a data desta entrada no formato visto nas seÁıes
 anteriores. Usei o atalho C-u C-c ! de acordo com o texto:
 - http://orgmode.org/manual/Creating-timestamps.html
 
-Reviso aqui o gr√°fico gerado na se√ß√£o (veja se√ß√£o imediatamente anterior):
+Reviso aqui o gr·fico gerado na seÁ„o (veja seÁ„o imediatamente anterior):
 - [[*Analizando resultados obtidos][Analizando resultados obtidos]]
 
-Vamos olhar os dados (note o caminho relativo a raiz do reposit√≥rio):
+Vamos olhar os dados (note o caminho relativo a raiz do repositÛrio):
 
 #+begin_src R :results output :session :exports both
 df <- read.csv("benchmarks/MM/exec_normal_par80/threadAnalyseOutput.csv");
@@ -863,11 +885,11 @@ head(df[df$thread == 1 & df$hardwareCounter == "PAPI_L1_DCM",]);
 
 Parece estar tudo bem, o valor vai sempre aumentando.
 
-Olhando o script =scriptOfGraph.sh=, parece-me que est√°s tirando fora a
-informa√ß√£o de tempo. N√£o entendi tamb√©m de onde tiraste a
-informa√ß√£o das threads, pois olhando o arquivo =execNormal80.csv= (que
-parece ser a origem dos dados), n√£o tem dados sobre threads nas linhas
-com as m√©tricas. Veja:
+Olhando o script =scriptOfGraph.sh=, parece-me que est·s tirando fora a
+informaÁ„o de tempo. N„o entendi tambÈm de onde tiraste a
+informaÁ„o das threads, pois olhando o arquivo =execNormal80.csv= (que
+parece ser a origem dos dados), n„o tem dados sobre threads nas linhas
+com as mÈtricas. Veja:
 
 #+begin_src sh :results output :session :exports both
 ls -hl benchmarks/MM/execNormal80.csv
@@ -880,15 +902,15 @@ head benchmarks/MM/execNormal80.csv | grep METRIC
 : METRIC, 148299959647641 ,Metric: 0, PAPI_L1_DCM, 4412, PAPI_L1_TCM, 12150, PAPI_L2_ICM, 4795, PAPI_L2_TCM, 7592,
 : METRIC, 148299959668347 ,Metric: 0, PAPI_L1_DCM, 4523, PAPI_L1_TCM, 12576, PAPI_L2_ICM, 4846, PAPI_L2_TCM, 7690,
 
-Olhando para o gr√°fico (e o c√≥digo que o gerou):
+Olhando para o gr·fico (e o cÛdigo que o gerou):
 [[file:benchmarks/MM/exec_normal_par80/graph.pdf]]
 
-Alguns equ√≠vocos sobre o gr√°fico:
-- est√°s desenhando com linha, quando deverias usar =geom_point()=
+Alguns equÌvocos sobre o gr·fico:
+- est·s desenhando com linha, quando deverias usar =geom_point()=
 - evitar _sempre_ escalas logaritmicas, prefira escalas lineares
 
-Existem alguns equ√≠vocos sobre os dados tamb√©m. Por exemplo, ap√≥s
-agrupar com =group_by= nenhuma transforma√ß√£o nos dados √© feita. Al√©m
+Existem alguns equÌvocos sobre os dados tambÈm. Por exemplo, apÛs
+agrupar com =group_by= nenhuma transformaÁ„o nos dados È feita. AlÈm
 disso, entendo que como os valores dos contadores apenas aumentam
 (veja acima), o ideal seria subtrair o maior valor do contador pelo
 menor valor do mesmo contador. Isso permitiria tu obteres o valor
@@ -902,7 +924,7 @@ nrow(k);
 #+RESULTS:
 : [1] 76884
 
-Existem v√°rias medidas, vamos ver a diferen√ßa:
+Existem v·rias medidas, vamos ver a diferenÁa:
 
 #+begin_src R :results output :session :exports both
 head(k);
@@ -927,10 +949,10 @@ tail(k);
 307533      1     PAPI_L1_DCM 339604
 #+end_example
 
-Como n√£o temos a coluna do tempo (foi removida desse CSV pelo script
-mencionado acima), vamos plotar este valor em fun√ß√£o da ordem das
-medi√ß√µes. Mas primeiro, adicionar uma nova coluna com um identificador
-de cada medi√ß√£o:
+Como n„o temos a coluna do tempo (foi removida desse CSV pelo script
+mencionado acima), vamos plotar este valor em funÁ„o da ordem das
+mediÁıes. Mas primeiro, adicionar uma nova coluna com um identificador
+de cada mediÁ„o:
 
 #+begin_src R :results output :session :exports both
 k$seq = seq(1,nrow(k));
@@ -956,7 +978,7 @@ tail(k);
 307533      1     PAPI_L1_DCM 339604 76884
 #+end_example
 
-√ìtimo, agora vamos ao gr√°fico:
+”timo, agora vamos ao gr·fico:
 
 #+begin_src R :results output graphics :file (org-babel-temp-file "figure" ".png") :exports both :width 600 :height 400 :session
 library(ggplot2);
@@ -966,11 +988,11 @@ ggplot(k, aes(x=seq, y=value)) + geom_point() + theme_bw();
 #+RESULTS:
 [[file:/tmp/babel-10319ASZ/figure10319Cnl.png]]
 
-Veja s√≥ que grave, o contador bate no limite e volta para 0. Isso √© um
-problema pois n√£o podemos simplesmente considerar a diferen√ßa entre o
-valor m√°ximo e o m√≠nimo para ter um sum√°rio do valor para cada thread.
+Veja j· que grave, o contador bate no limite e volta para 0. Isso È um
+problema pois n„o podemos simplesmente considerar a diferenÁas entre o
+valor m·ximo e o mÌnimo para ter um sum·rio do valor para cada thread.
 
-Qual seria a solu√ß√£o para isso?
+Qual seria a soluÁ„o para isso?
 
 Veja o momento onde isso acontece.
 
@@ -987,8 +1009,8 @@ head(k[k$seq > 38439,]);
 : 153773      1     PAPI_L1_DCM   4412 38444
 : 153777      1     PAPI_L1_DCM   4523 38445
 
-Isso √© relativamente simples de detectar no momento do
-rastreamento. N√£o h√° nenhum evento do Score-P que informa que houve
+Isso È relativamente simples de detectar no momento do
+rastreamento. N„o h· nenhum evento do Score-P que informa que houve
 uma quebra do contador (pelo seu tamanho limitado)?
 
 Isso deve ser resolvido antes de qualquer coisa.
@@ -997,7 +1019,18 @@ _Tarefas_:
 - adicionar uma coluna de tempo ao CSV
 - tentar detectar a quebra do contador no Score-p
 
-A ferramenta ReDFST parece que rastrea alguns contadores (n√£o tenho
-total certeza), e me parece tamb√©m que ela detectaria. Mas os valores
-de contadores obtidos s√£o sempre globais. O que queremos √© a evolu√ß√£o
+A ferramenta ReDFST parece que rastrea alguns contadores (n„o tenho
+total certeza), e me parece tambÈm que ela detectaria. Mas os valores
+de contadores obtidos s„o sempre globais. O que queremos È a evoluÁ„o
 do valor dos contadores _ao longo do tempo_.
+
+* [14:13:14; 19.07.2016] Adicionar coluna de tempo ao CSV
+
+#+begin_src sh :results output :exports both
+cd benchmarks/MM/exec_continuos_par80/
+#+end_src
+
+#+RESULTS:
+: graph.pdf
+: threadAnalyseOutput.csv
+
